cluster/proxy/bastion/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: bastion-svc
  namespace: proxy
subsets:
  - addresses:
      - ip: 192.168.0.255
    ports:
      - port: 443
