cluster/proxy/bastion/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bastion-svc
  namespace: proxy
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
      name: https
